Updated rescue-animal-api to use Azure Key Vault and updated test config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=rescue-animal-api
 
 spring.datasource.url=jdbc:mysql://cs-499-db.mysql.database.azure.com:3306/rescue_animal?sslMode=REQUIRED
-spring.datasource.username=user@cs-499-db
-spring.datasource.password=reader123!
+spring.datasource.username=${database-username}
+spring.datasource.password=${database-password}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -11,3 +11,6 @@ spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=60000
+
+spring.cloud.azure.credential.managed-identity-enabled=true
+spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://capstone-vault.vault.azure.net/
