--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -49,12 +50,12 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>azure-spring-boot-starter-keyvault-secrets</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
@@ -70,20 +71,22 @@
                     </excludes>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>1.18.32</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-webapp-maven-plugin</artifactId>
@@ -112,26 +115,6 @@
                         <property>
                             <name>SPRING_PROFILES_ACTIVE</name>
                             <value>prod</value>
-                        </property>
-                        <property>
-                            <name>SPRING_DATASOURCE_URL</name>
-                            <value>jdbc:mysql://cs-499-db.mysql.database.azure.com:3306/rescue_animal?useSSL=true&amp;requireSSL=false</value>
-                        </property>
-                        <property>
-                            <name>SPRING_DATASOURCE_USERNAME</name>
-                            <value>user@cs-499-db</value>
-                        </property>
-                        <property>
-                            <name>SPRING_DATASOURCE_PASSWORD</name>
-                            <value>reader123!</value>
-                        </property>
-                        <property>
-                            <name>SPRING_JPA_HIBERNATE_DDL_AUTO</name>
-                            <value>update</value>
-                        </property>
-                        <property>
-                            <name>SPRING_JPA_DATABASE_PLATFORM</name>
-                            <value>org.hibernate.dialect.MySQL8Dialect</value>
                         </property>
                     </appSettings>
                 </configuration>
